--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://hnejman.github.io/goit-js-hw-09/src/",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-09/src"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-09/"
   },
   "repository": {
     "type": "git",
